crates/css_ast/tests/snapshots/basic_snapshots__basic_media.snap
---
source: crates/css_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "MediaRule",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 6
      },
      "query": [
        {
          "precondition": null,
          "media_type": {
            "type": "Screen",
            "kind": "Ident",
            "offset": 7,
            "len": 6
          },
          "and": null,
          "condition": null
        }
      ],
      "block": {
        "open": {
          "kind": "LeftCurly",
          "offset": 14,
          "len": 1
        },
        "properties": [],
        "rules": [
          {
            "type": "stylerule",
            "selectors": [
              [
                [
                  {
                    "type": "tag",
                    "value": {
                      "Html": {
                        "Body": {
                          "kind": "Ident",
                          "offset": 17,
                          "len": 4
                        }
                      }
                    }
                  }
                ],
                null
              ]
            ],
            "type": "style-declaration",
            "open": {
              "kind": "LeftCurly",
              "offset": 22,
              "len": 1
            },
            "declarations": [
              [
                {
                  "type": "property",
                  "name": {
                    "kind": "Ident",
                    "offset": 26,
                    "len": 5
                  },
                  "colon": {
                    "kind": "Colon",
                    "offset": 31,
                    "len": 1
                  },
                  "value": {
                    "Named": {
                      "Black": {
                        "kind": "Ident",
                        "offset": 33,
                        "len": 5
                      }
                    }
                  },
                  "important": null
                },
                null
              ]
            ],
            "rules": [],
            "close": {
              "kind": "RightCurly",
              "offset": 40,
              "len": 1
            }
          }
        ],
        "close": {
          "kind": "RightCurly",
          "offset": 42,
          "len": 1
        }
      }
    }
  ]
}
