crates/css_ast/tests/snapshots/basic_snapshots__basic_nth.snap
---
source: crates/css_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "functional-pseudo-class",
              "value": {
                "type": "nth-child",
                "value": {
                  "colon": {
                    "kind": "Colon",
                    "offset": 0,
                    "len": 1
                  },
                  "function": {
                    "kind": "Function",
                    "offset": 1,
                    "len": 10
                  },
                  "value": {
                    "Anb": [
                      1,
                      1,
                      [
                        {
                          "kind": "Ident",
                          "offset": 11,
                          "len": 1
                        },
                        {
                          "kind": "Number",
                          "offset": 12,
                          "len": 2
                        }
                      ]
                    ]
                  },
                  "close": {
                    "kind": "RightParen",
                    "offset": 14,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 16,
        "len": 1
      },
      "declarations": [],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 17,
        "len": 1
      }
    }
  ]
}
