crates/css_ast/tests/snapshots/basic_snapshots__basic_rule.snap
---
source: crates/hdx_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "Body": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 4
                  }
                }
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 5,
        "len": 1
      },
      "declarations": [
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 9,
            "len": 9
          },
          "colon": {
            "kind": "Colon",
            "offset": 18,
            "len": 1
          },
          "value": {
            "LengthPercentage": {
              "type": "px",
              "value": {
                "kind": "Dimension",
                "len": 5,
                "unit": "px"
              }
            }
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "offset": 25,
            "len": 1
          }
        }
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 27,
        "len": 1
      }
    }
  ]
}
